# kardec-study-assistant

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/chapter_summaries/: evangelho.json
data/json_files/: A Gênese.json  O Céu e o Inferno.json  ceu-inferno.json  evangelho.json  genese.json  livro-espiritos.json  livro-mediuns.json
data/markdown_files/: ceu-inferno.md  evangelho.md  genese.md  livro-espiritos.md  livro-mediuns.md  trecho_diario.md
data/paths/: fundamentos-da-doutrina.json  fundamentos-espirita-aprofundado.json  fundamentos-espirita-curioso.json  fundamentos-espirita-estudante.json  fundamentos-evangelico-aprofundado.json  fundamentos-evangelico-curioso.json  fundamentos-evangelico-estudante.json
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx
src/api/: main.py  paths.py  routes.py  schemas.py
src/core/: config.py
src/ingestion/: embeddings.py  pipeline.py  vectorstore.py
src/parsing/: chunking.py  cleaner.py  parser.py  parsing_pipeline.py
src/rag/: chapter_summary_prompt.py  curador.py  curador_prompt.py  (+12 more)
tests/: conftest.py  test_api.py  test_chapter_summary_prompt.py  test_chunking.py  test_config.py  test_curador.py  test_embeddings.py  test_evangelho.py  test_explicador.py  test_explicador_prompt.py  test_generate_chapter_summaries.py  test_generator.py  test_mode_detector.py  test_parser.py  test_paths.py  test_pipeline.py  test_prompt.py  test_reflect.py  test_reflect_prompt.py  test_retriever.py  test_study.py  test_study_prompt.py  test_vectorstore.py
(+42 files in other folders)
