[project]
name = "dialogue-with-the-doctrine"
version = "0.1.0"
description = "Study assistant based on Allan Kardec's works"
authors = [
    { name = "Mary Camila" }
]
requires-python = ">=3.12"

dependencies = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]

[tool.pdm]
distribution = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
