[project]
name = "kardec-study-assistant"
version = "0.1.0"
description = "Backend and LLM study assistant based on Allan Kardec's works"
authors = [
    { name = "Mary Camila" }
]
requires-python = ">=3.12"

dependencies = [
    "openai>=1.0.0",
    "sentence-transformers>=2.7.0",
    "chromadb>=0.4.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv",
]

[dependency-groups]
dev = [
    "black",
    "isort",
    "pytest",
    "httpx",
]

[tool.uv]
package = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

